--- a/style.css
+++ b/style.css
@@ -12,72 +12,57 @@
     font-stretch: normal;
 }
 
-
-body {
-    padding-right: 20pt;
-    padding-left: 20pt;
-    font-size: 1.25rem;
-
+.bg-primary{
+    background: beige;
 }
 
-nav {
-    align-items: center;
-    text-align: center;
-    position: sticky;
-    top: 0;
+.bg-img {
+    background-image: url("img/bg.jpg");
+
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    height: 100%;
 }
 
 .nav-menu > ul {
-    text-align: center;
+    position: sticky;
     list-style-type: none;
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #333333
 }
 
-.menu-link {
-    display: inline-block;
+.menu-link  {
+    display: block;
     color: white;
     text-align: center;
-    padding: 15pt 20pt;
+    padding: 10pt 20pt;
     text-decoration: none;
-    margin: 0 auto;
+}
+
+.menu-link {
+    float: left;
 }
 
 .menu-link a:hover {
     background-color: #04AA6D;
-    padding: 10pt 15pt;
+    padding: 10pt 0;
 }
 
 .menu-link a {
     text-decoration: none;
     color: white;
-    padding: 0 15pt;
-    font-family: "Cambria", serif;
-    overflow: hidden;
-    transition: 0.2s ease-out;
-}
-
-h2 {
-    font-family: "Cambria", serif;
-    text-align: center;
 }
 
 .page-header {
-    transition: 0.3s;
-    font-family: Zing-Rust, serif;
-    padding-top: 60px;
-    margin-top: -60px;
-    display: inline;
-}
-
-.page-header-container{
     text-align: center;
-    margin: 15pt 0;
+    font-family: Zing-Rust, serif;
 }
 
-.page-header:hover {
+.page-header:hover{
     color: #04AA6D;
 }
 
@@ -85,94 +70,18 @@ h2 {
     margin: 5pt 10pt;
 }
 
-.p-margin {
-    margin-left: 10pt;
-    margin-bottom: 15pt;
-}
-
 p {
-    font-family: "Cambria", serif;
+    margin-left: 20pt;
+}
+
+.photo {
+    margin-right: 20pt;
+    border: 1px solid gray;
+}
+
+.center-img{
     margin-top: 5pt;
-    margin-bottom: 5pt;
-}
-
-.p-footer {
-    font-family: "Cambria", serif;
-    margin: 25pt 0;
     text-align: center;
-}
-
-.p-footer:hover{
-    transition: 0.3s;
-    color: #04AA6D;
-}
-
-span {
-    margin-left: 10pt;
-    font-family: "Cambria", serif;
-}
-
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
-
-.container {
-    text-align: center;
-    font-family: "Cambria", serif;
-}
-
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    border-radius: 5px; /* 5px rounded corners */
-    background: #e2efda;
-    padding: 4pt 4pt;
-    overflow: hidden;
-}
-
-.project-card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
-
-.project-card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    border-radius: 5px; /* 5px rounded corners */
-    background: #e2efda;
-    overflow: hidden;
-    padding: 5pt 5pt 5pt 10pt;
-}
-
-/* Add rounded corners to the top left and the top right corner of the image */
-.pht {
-    border-radius: 10pt 10pt 10pt 10pt;
-    float: right;
-    height: auto;
-    width: auto;
-    vertical-align: top;
-    padding: 0 3pt;
-}
-
-.project-pht {
-    border-radius: 10pt 10pt 10pt 10pt;
-    float: right;
-    height: auto;
-    width: 48%;
-    vertical-align: top;
-    padding: 0 3pt;
-}
-
-.center-img {
-    border-radius: 10pt 10pt 10pt 10pt;
-    transition: 0.3s;
-    text-align: center;
-    height: auto;
-    padding: 0 3pt;
-    margin-right: 15pt;
-}
-
-.center-img:hover{
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .bottom-img {
@@ -183,33 +92,18 @@ span {
 }
 
 table {
-    width: 80%;
+    width: 75%;
     margin-left: auto;
     margin-right: auto;
-    border-collapse: collapse;
-}
-
-TD, TH {
-    padding: 10pt 10pt 10pt 10pt;
-    border: 1px solid #333333;
-}
-
-.custom-footer {
-    margin-top: 50pt;
     text-align: center;
-    font-family: "Cambria", serif;
+    border-collapse: collapse; /* Убираем двойные линии между ячейками */
+}
+TD, TH {
+    padding: 3px; /* Поля вокруг содержимого таблицы */
+    border: 1px solid black; /* Параметры рамки */
 }
 
-.link {
-    text-decoration: none;
-    color: blue;
-    font-family: "Cambria", serif;
-}
-
-.badge {
-    width:150px !important;
-}
-
-.li-margin{
-    margin: 10pt 0;
+.custom-footer{
+    margin-top: 100pt;
+    text-align: center;
 }
