--- a/style.css
+++ b/style.css
@@ -12,57 +12,77 @@
     font-stretch: normal;
 }
 
-.bg-primary{
-    background: beige;
+
+body {
+    padding-right: 20pt;
+    padding-left: 20pt;
+    font-size: 1.25rem;
+
 }
 
-.bg-img {
-    background-image: url("img/bg.jpg");
-
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
-    height: 100%;
+nav {
+    align-items: center;
+    text-align: center;
+    position: sticky;
+    top: 0;
 }
 
 .nav-menu > ul {
-    position: sticky;
+    position: relative;
     list-style-type: none;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     overflow: hidden;
     background-color: #333333
 }
 
-.menu-link  {
+.menu-link {
+    position: relative;
     display: block;
     color: white;
     text-align: center;
-    padding: 10pt 20pt;
+    padding: 15pt 20pt;
     text-decoration: none;
 }
 
 .menu-link {
     float: left;
+    margin: 0 auto;
 }
 
 .menu-link a:hover {
     background-color: #04AA6D;
-    padding: 10pt 0;
+    padding: 10pt 15pt;
 }
 
 .menu-link a {
     text-decoration: none;
     color: white;
+    padding: 0 15pt;
+    font-family: "Cambria", serif;
+    overflow: hidden;
+    transition: 0.2s ease-out;
+}
+
+h2 {
+    font-family: "Cambria", serif;
+    text-align: center;
 }
 
 .page-header {
-    text-align: center;
+    transition: 0.3s;
     font-family: Zing-Rust, serif;
+    padding-top: 60px;
+    margin-top: -60px;
+    display: inline;
 }
 
-.page-header:hover{
+.page-header-container{
+    text-align: center;
+    margin: 15pt 0;
+}
+
+.page-header:hover {
     color: #04AA6D;
 }
 
@@ -70,18 +90,85 @@
     margin: 5pt 10pt;
 }
 
+.p-margin {
+    margin-left: 10pt;
+    margin-bottom: 15pt;
+}
+
 p {
-    margin-left: 20pt;
-}
-
-.photo {
-    margin-right: 20pt;
-    border: 1px solid gray;
-}
-
-.center-img{
+    font-family: "Cambria", serif;
     margin-top: 5pt;
+    margin-bottom: 5pt;
+}
+
+.p-footer {
+    font-family: "Cambria", serif;
+    margin-top: 25pt;
     text-align: center;
+}
+
+span {
+    margin-left: 10pt;
+    font-family: "Cambria", serif;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.container {
+    text-align: center;
+    font-family: "Cambria", serif;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    border-radius: 5px; /* 5px rounded corners */
+    background: #e2efda;
+    padding: 4pt 4pt;
+    overflow: hidden;
+}
+
+.project-card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.project-card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    border-radius: 5px; /* 5px rounded corners */
+    background: #e2efda;
+    overflow: hidden;
+    padding: 5pt 5pt 5pt 10pt;
+}
+
+/* Add rounded corners to the top left and the top right corner of the image */
+.pht {
+    border-radius: 10pt 10pt 10pt 10pt;
+    float: right;
+    height: auto;
+    width: auto;
+    vertical-align: top;
+    padding: 0 3pt;
+}
+
+.project-pht {
+    border-radius: 10pt 10pt 10pt 10pt;
+    float: right;
+    height: auto;
+    width: 48%;
+    vertical-align: top;
+    padding: 0 3pt;
+}
+
+.center-img {
+    border-radius: 10pt 10pt 10pt 10pt;
+    text-align: center;
+    height: auto;
+    vertical-align: top;
+    padding: 0 3pt;
+    margin-right: 50pt;
 }
 
 .bottom-img {
@@ -92,18 +179,33 @@ p {
 }
 
 table {
-    width: 75%;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
-    text-align: center;
-    border-collapse: collapse; /* Убираем двойные линии между ячейками */
-}
-TD, TH {
-    padding: 3px; /* Поля вокруг содержимого таблицы */
-    border: 1px solid black; /* Параметры рамки */
+    border-collapse: collapse;
 }
 
-.custom-footer{
-    margin-top: 100pt;
+TD, TH {
+    padding: 10pt 10pt 10pt 10pt;
+    border: 1px solid #333333;
+}
+
+.custom-footer {
+    margin-top: 50pt;
     text-align: center;
+    font-family: "Cambria", serif;
+}
+
+.link {
+    text-decoration: none;
+    color: blue;
+    font-family: "Cambria", serif;
+}
+
+.badge {
+    width:150px !important;
+}
+
+.li-margin{
+    margin: 10pt 0;
 }
